# mcuboot

./: .gitignore  .gitlab-ci.yml  .gitlint  .gitmodules  .mbedignore  .ruff.toml  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Jenkinsfile  Kconfig  Makefile  Makefile.coverity  NOTICE  README-RIOT.rst  README-mynewt.rst  README-zephyr.rst  README.md  build_boot.sh  donotmerge.txt  enc-aes256kw.b64  enc-aeskw-128.b64  enc-aeskw-128_ns.b64  foo.txt  go.mod  mbed-os.lib  project.yml  release-notes.rst  repository.yml  root-ec-p256-root.crt  root-ec-p256.chain  root-ec-p384-pkcs8.pem  root-ec-p384.pem  root-ed25519-unknown.pem  sign.sh  version.yml  west.yml
boot/bootutil/: CMakeLists.txt  design.txt  pkg.yml  signed_images.md  syscfg.yml
boot/bootutil/include/: fih_config.h
boot/bootutil/src/: Makefile  autogen-pubkey.c  boot_record.c  boot_store_enc_keys.c  bootapi.c  bootloader_events.c  bootutil_area.c  bootutil_area.h  bootutil_find_key.c  bootutil_image_hash.c  bootutil_img_hash.c  bootutil_img_security_cnt.c  bootutil_loader.c  bootutil_loader.h  bootutil_misc.c  bootutil_misc.h  bootutil_priv.h  bootutil_public.c  caps.c  cbor.c  cbor.h  copy.c  copy_priv.h  crc32c.c  crc32c.h  crypto_common.c  delta.c  ed25519_psa.c  encrypt_ec256.c  encrypt_kw.c  encrypt_misc.c  encrypt_rsa.c  encrypt_x25519.c  encrypted.c  encrypted_priv.h  encrypted_psa.c  fault_injection_hardening.c  fault_injection_hardening_delay_rng_mbedtls.c  fault_injection_hardening_delay_rng_psa.c  generate_key_pair.c  (+28 more)
boot/bootutil/test/: pkg.yml
boot/bootutil/zephyr/: CMakeLists.txt
boot/espressif/: CMakeLists.txt  Kconfig  bootloader.conf  common.cmake  keys.c  main.c  os.c  secureboot-sign-ec256.conf  secureboot-sign-ed25519.conf  secureboot-sign-rsa2048.conf  secureboot-sign-rsa3072.conf  serial_adapter.c
boot/espressif/ci_configs/: esp32c2-secureboot.conf  esp32c6-secureboot.conf  esp32c61-secureboot.conf  esp32h2-secureboot.conf  esp32p4-secureboot.conf  multi-boot.conf  multi-image.conf  secureboot-sign-ec256.conf  secureboot-sign-ed25519.conf  secureboot-sign-rsa2048.conf  secureboot-sign-rsa3072.conf  serialrecovery.conf
boot/espressif/hal/: CMakeLists.txt
boot/espressif/include/: esp_loader.h
boot/espressif/port/: esp_loader.c  esp_mcuboot.c  serial_adapter.c
boot/espressif/tools/: toolchain-esp32.cmake  toolchain-esp32c2.cmake  toolchain-esp32c3.cmake  toolchain-esp32c61.cmake  toolchain-esp32h2.cmake  toolchain-esp32p4.cmake  toolchain-esp32s2.cmake  toolchain-esp32s3.cmake  utils.cmake
boot/espressif/zephyr/: CMakeLists.txt  Kconfig  prj.conf  zephyr.cmake
boot/fault_injection_hardening/: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
boot/fault_injection_hardening/docs/: SECURITY.md  SubmittingPatches.md  contributing.md  index.md
boot/fault_injection_hardening/include/: fault_injection_hardening.h
boot/fault_injection_hardening/src/: fault_injection_hardening.c
boot/hpmicro/hello_world/: CMakeLists.txt  hello_world.c
boot/mbed/: CMakeLists.txt  app_enc_keys.c  mbed_lib.json  mcuboot_imgtool.cmake  mcuboot_main.cpp
boot/mbed/src/: flash_map_backend.cpp  secondary_bd.cpp
boot/selfhosted/: CMakeLists.txt  README.md
boot/selfhosted/include/: byteorder.h  mcuboot.h
boot/selfhosted/src/: app_enc_keys.c  flash_map_backend.c  main.c  mcuboot.c
boot/zephyr/: CMakeLists.txt  Kconfig  Kconfig.firmware_loader  Kconfig.serial_recovery  Kconfig.usb_dfu  Kconfig.uuid.template  Makefile  VERSION  app.overlay  arduino_101.conf  arm_cleanup.c  boot_rng.c  boot_serial_extension_zephyr_basic.c  boot_serial_extensions.c  delta_dfu.conf  dts.overlay  firmware_loader.c  flash_check.c  flash_map.c  flash_map_extended.c  flash_map_legacy.c  gen_enc_keys.conf  gen_enc_keys.overlay  hal_flash.c  hooks_find_next_slot.c  hooks_sample.c  io.c  keys.c  main.c  mbedtls.conf  mcuboot_uuid.c  nrf_cleanup.c  os.c  pm.yml  prj-p256.conf  prj.conf  ram_load.c  rng_stm32.c  root_cert.c  sample.yaml  (+15 more)
boot/zephyr/arch/: arc.c  arm.c  default.c  esp32.c  xtensa.c
boot/zephyr/boards/: actinius_icarus.conf  actinius_icarus_nrf9160.conf  actinius_icarus_som_nrf9160.conf  b_u585i_iot02a.conf  b_u585i_iot02a.overlay  b_u585i_iot02a_stm32u585xx_ext_flash_app.conf  circuitdojo_feather_nrf9160.conf  conexio_stratus.conf  conexio_stratus_pro.conf  ctcc_nrf52840.conf  ctcc_nrf9161.conf  disco_l475_iot1_stm32l475xx.conf  esp32.conf  esp32_devkitc_wroom_esp32_procpu.conf  esp32c3_devkitm.conf  esp32s2_franzininho_esp32s2.conf  esp32s3_luatos_core_usb.conf  flash_ext_sim_driver.conf  frdm_mcxa156.conf  frdm_mcxn236.conf  frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0_qspi.conf  frdm_mcxn947_mcxn947_cpu0_qspi.overlay  icev_wireless.conf  icev_wireless_esp32c3.conf  intel_s1000_crb.conf  lora_e5_mini.overlay  lpcxpresso55s28_lpc55s28.conf  lpcxpresso55s36_lpc55s36.conf  m5stack_cores3_esp32s3_procpu_se.overlay  mcx_n9xx_evk_mcxn947_cpu0.conf  mcx_n9xx_evk_mcxn947_cpu0_qspi.conf  mcx_n9xx_evk_mcxn947_cpu0_qspi.overlay  mimxrt1010_evk.conf  mimxrt1024_evk_mimxrt1024.conf  mimxrt1040_evk_mimxrt1042.conf  (+69 more)
cert/: A.crt  (+5 more)
sim/: Cargo.toml  README.rst  build.rs
sim/cboria/: Cargo.toml  rfc7049.txt
sim/csupport/: run.c
sim/mcuboot-sys/: Cargo.toml  build.rs
sim/simflash/: Cargo.toml
sim/src/: api.rs  area.rs  c.rs  caps.rs  depends.rs  ecdsa_pub_key-rs.txt  ed25519_pub_key-rs.txt  ed25519_pub_key_2-rs.txt  ed25519_pub_key_unknown-rs.txt  flash.rs  image.rs  lib.rs  main.rs  rsa3072_pub_key-rs.txt  rsa_pub_key-rs.txt  suit.rs  testlog.rs  tlv.rs  utils.rs
sim/suit/: Cargo.toml
sim/tests/: core.rs  lms_compat.rs
zephyr/: CMakeLists.txt  Kconfig  README.rst  build_boot.sh  module.yml  prj.conf  requirements.txt
zephyr/cmake/: mcuboot_signature_key_file_generation.cmake  mcuboot_zephyr_runner_mass_erase.cmake
zephyr/doc/: CMakeLists.txt  conf.py  mcuboot_index.rst  zephyr.doxyfile.in
zephyr/include/: config-ec.h  config-ed25519.h  config-kw.h  config-rsa.h
zephyr/src/: Makefile  hal_flash.c  os.c
zephyr/subsys/: CMakeLists.txt
(+1311 files in other folders)
