[package]
name = "bootsim"
version = "0.1.0"
authors = ["David Brown <davidb@davidb.org>"]
edition = "2018"

[features]
default = []

sig-rsa = ["mcuboot-sys/sig-rsa"]
sig-rsa3072 = ["mcuboot-sys/sig-rsa3072"]
sig-ecdsa = ["mcuboot-sys/sig-ecdsa"]
sig-ed25519 = ["mcuboot-sys/sig-ed25519"]
overwrite-only = ["mcuboot-sys/overwrite-only"]
validate-primary-slot = ["mcuboot-sys/validate-primary-slot"]
enc-rsa = ["mcuboot-sys/enc-rsa"]
enc-kw = ["mcuboot-sys/enc-kw"]
bootstrap = ["mcuboot-sys/bootstrap"]
multiimage = ["mcuboot-sys/multiimage"]

[dependencies]
byteorder = "1.3"
libc = "0.2.0"
rand = "0.4.0"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.5"
simflash = { path = "simflash" }
mcuboot-sys = { path = "mcuboot-sys" }
ring = "0.14.1"
untrusted = "0.6.2"
pem = "0.5"
aes-ctr = "0.2.0"
base64 = "0.9.3"

# The simulator runs very slowly without optimization.  A value of 1
# compiles in about half the time, but runs about 5-6 times slower.  2
# and 3 are hardly different in either compile time or performance.
# Use 2 in case that makes the code slightly more debuggable.
[profile.test]
opt-level = 2

[profile.dev]
opt-level = 2
